--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -6,7 +6,8 @@
     <p>
       Codespaces
       <span class="heart">♥️</span>
-      Railsチュートリアル
+      Railsチュートリアル<br>
+      <span>Toy App</span>
     </p>
     <p class="small">
       🎓✨<br>
